# desktop

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md  Taskfile.yml  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  state.rs
apps/desktop/web/: App.tsx  index.css  tauri-transport.test.ts  tauri-transport.ts
apps/web/client/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/client/src/: App.tsx  contracts-runtime.mock.ts  contracts-runtime.ts  index.css
apps/web/server/: Cargo.toml
apps/web/server/src/: app_state.rs  bootstrap.rs  config.rs  error.rs  main.rs  routes.rs  timezone.rs
apps/web/server/src/handlers/: agents.rs  (+5 more)
crates/acp/: Cargo.toml
crates/acp/src/: lib.rs  peer.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/application/src/project/: handlers.rs  mod.rs  tests.rs
crates/application/src/project_work_context/: tests.rs
crates/application/src/session/: handlers.rs  mapper.rs  mod.rs
crates/application/src/task/: handlers.rs  mod.rs  ports.rs  tests.rs  worktree_provisioner.rs
crates/backend/: Cargo.toml
crates/backend/src/: agent.rs  bootstrap.rs  clock.rs  error.rs  lib.rs  project.rs  session.rs  skill.rs  task.rs
crates/backend/src/agent_runtime/: actor.rs  connection.rs  mod.rs  models.rs  paths.rs  routing.rs  stream.rs  support.rs
crates/contracts/: Cargo.toml
crates/contracts/src/: frontend.rs  lib.rs  project.rs  session.rs  task.rs  worktree.rs
crates/contracts/src/acp/: extensibility.rs  file.rs  mod.rs  plan.rs  session_config_options.rs  session_mode.rs  slash_command.rs  terminal.rs
crates/db/src/: lib.rs  repository_tests.rs
crates/db/src/migration/: catalog.rs  schema_v0001.rs
crates/db/src/repository/: cascade.rs  mod.rs  session.rs
crates/domain/src/: error.rs  lib.rs  session.rs  tests.rs
crates/gitlancer/src/domain/: worktree.rs
crates/gitlancer/src/git/: worktree.rs
crates/gitlancer/src/parse/: worktree.rs
crates/gitlancer/tests/: git_runtime.rs  parse_behaviors.rs
crates/logging/: Cargo.toml
crates/logging/src/: clock.rs  config.rs  error.rs  formatter.rs  gitlancer_bridge.rs  init.rs  lib.rs  tests.rs
docs/: agent-runtime.md  application-contracts.md  desktop-runtime.md  runtime-logging.md  web-server-runtime.md
openspec/changes/archive/2026-05-09-add-basic-task-worktree-session-handlers/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-15-generate-frontend-sdk-from-contracts/: design.md  proposal.md  tasks.md
openspec/specs/database-repositories/: spec.md
openspec/specs/frontend-contract-sdk/: spec.md
openspec/specs/project-work-contexts/: spec.md
openspec/specs/task-worktree-provisioning/: spec.md
openspec/specs/web-server-runtime/: spec.md
xtask/: Cargo.toml
xtask/src/: export_contracts.rs  lib.rs  main.rs
(+5 files in other folders)
