[package]
name = "ora-logging"
version.workspace = true
edition.workspace = true

[lib]
name = "ora_logging"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
gitlancer = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
