[package]
name = "ora-desktop"
version = "0.1.0"
description = "Ora Desktop"
authors = ["Eric Wang"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono-tz = "0.10"
iana-time-zone = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
ora-backend = { path = "../../../crates/backend" }
ora-contracts = { path = "../../../crates/contracts" }
ora-logging = { path = "../../../crates/logging" }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
pretty_assertions = "1"
